--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   adhara_socket_io: ^0.4.2+1
   syncfusion_flutter_gauges: ^18.3.48
   charts_flutter: ^0.9.0
+  http: ^0.12.2
+  shared_preferences: ^0.5.12+4
+  socket_io_client: ^0.9.12
+
 
 
   # The following adds the Cupertino Icons font to your application.
