--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   http: ^0.12.2
   shared_preferences: ^0.5.12+4
   socket_io_client: ^0.9.12
+  # percent_indicator: ^2.1.9+1
+  # flutter_animation_progress_bar: ^1.0.6
 
 
 
